<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/trashText"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:autofillHints=""
        android:background="@drawable/background_calendar_trash_name_burn"
        android:ellipsize="end"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:gravity="start|top"
        android:lines="1"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="@android:color/white"
        android:textSize="10sp"
        tools:text="もえるごみだよおおおおおおおおお" />
</FrameLayout>